--- a/angular.json
+++ b/angular.json
@@ -7,29 +7,29 @@
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
-      "prefix": "app",
+      "prefix": "bbw",
       "schematics": {},
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/bbw-web-ui",
-            "index": "src/index.html",
+            "index": "src/app/bbw/bbw-index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
+              "src/app/bbw/resources/img/favicon.ico",
               "src/assets"
             ],
             "styles": [
               {
                 "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
               },
-              "src/styles.css"
+              "src/app/bbw/common/css/global.css"
             ],
             "scripts": []
-          },
+          },  
           "configurations": {
             "production": {
               "fileReplacements": [
@@ -78,11 +78,11 @@
               {
                 "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
               },
-              "src/styles.css"
+              "src/app/bbw/common/css/global.css"
             ],
             "scripts": [],
             "assets": [
-              "src/favicon.ico",
+              "src/app/bbw/resources/img/favicon.ico",
               "src/assets"
             ]
           }
@@ -129,5 +129,6 @@
       }
     }
   },
+
   "defaultProject": "bbw-web-ui"
 }
